Added social links, a bio, and blog posts

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+﻿<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -6,7 +8,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-  <title>Single Page Portfolio</title>
+  <title>Sheldon Lloyd</title>
 
   <!--  Styles  -->
   <link rel="stylesheet" href="styles/site.css">
@@ -15,7 +17,7 @@
 <body>
   <div class="flexbox height-100">
     <header class="vertical-text col-1">
-      <h1 class="margin-0">Title/Name</h1> <a href="#nav" class="portfolio-link secondary-color">Portfolio</a>
+      <h1 class="margin-0">Shedon Lloyd</h1> <a href="#nav" class="portfolio-link secondary-color">Portfolio</a>
 
     </header>
 
@@ -23,60 +25,30 @@
       <h2>About</h2>
       <div class="content overflow-hidden cf">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
-          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
-          vel nisl. Phasellus aliquam massa nec commodo tempor.
+          Right now I am a webdeveloper but 2018 is the year I plan on becoming a Web comic creator as well.
         </p>
         <p>
-          Aenean sed mi ac enim rutrum lacinia sit amet in magna. Vivamus porttitor, tellus eget finibus pellentesque, massa tortor fermentum odio, vel malesuada lorem velit eu nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-          Curae; Integer venenatis enim dictum quam lacinia blandit. Mauris at tincidunt dui, eu congue ante. Suspendisse dictum nisi ac mi aliquet, at fermentum neque ornare. Sed fermentum tempor tellus. Pellentesque habitant morbi tristique senectus
-          et netus et malesuada fames ac turpis egestas. Proin sit amet erat bibendum, imperdiet augue sit amet, viverra erat. Nulla vel justo non mi sollicitudin tempor a at elit. Sed congue ante enim, eu dignissim augue aliquam ut. Nulla faucibus mauris
-          ac nunc tempus viverra. Nullam ac dolor vitae lorem vehicula suscipit non eget justo. Aliquam maximus dignissim justo, in bibendum dui lobortis quis. Vivamus volutpat accumsan est ac lacinia. Cras laoreet nisi in ex consequat, vel blandit risus
-          ullamcorper.
+          Like many other kids in 90s, I watched a lot of Movies, Saturday morning cartoons, and anime adapted from comics and manga. But once I discovered and started to read the comics and manga from these shows I became inspired and wanted to create a comic of my own.
         </p>
         <p>
-          Mauris a convallis nisi. Etiam sit amet venenatis turpis, at pellentesque turpis. Fusce sit amet dolor in nibh malesuada pharetra. Cras iaculis et ex ut finibus. Praesent nibh urna, condimentum in erat a, pretium efficitur ipsum. Aliquam at mi tempor,
-          commodo odio a, posuere quam. Proin interdum convallis quam et consectetur. Sed nec sapien nec risus interdum egestas.
+          I started working on my own comic at the ripe old age of 8, by 11 Started drawing the actual comic.
         </p>
         <p>
-          Quisque quis convallis tellus. Curabitur viverra non risus quis sollicitudin. Donec vel est lacinia, egestas sem sed, aliquet sapien. Aliquam erat volutpat. Etiam et orci nibh. Proin iaculis eleifend vehicula. Fusce sed molestie risus, id vehicula ante.
-          Duis quis orci sem. Proin varius justo justo, varius faucibus elit consectetur eget.
+          This was at the time of the .com bubble, so I didn’t want to make just any comic. It was going to be what I thought at the time to be revolutionary ― I was going to put it on the web! As you can probably tell I was oblivious to the existence of webcomics at the time.
         </p>
         <p>
-          In quis aliquam magna. Maecenas venenatis neque eget venenatis bibendum. Vestibulum at placerat dolor, id iaculis magna. Nullam id finibus justo, eu blandit tortor. Proin ac placerat augue. Vivamus hendrerit eros sit amet nunc aliquet volutpat. Vestibulum
-          leo libero, vestibulum eu pellentesque vel, feugiat nec leo. Quisque elit leo, imperdiet dignissim diam ac, lobortis pulvinar nisi. Sed eleifend massa dui, id sodales felis auctor at. Donec eget maximus augue. Proin pulvinar tortor enim. Etiam
-          eget risus ac nisi auctor cursus. In hac habitasse platea dictumst. Fusce lacinia commodo consectetur. Suspendisse eget bibendum nulla, maximus rutrum magna.
+          Unfortunately by the time I got in high school I found new interests on of which included webdevelopment, and stopped drawing and writing so I never finished. By the end of college, I got back into comics and manga. With this came a renewed interest in art so I've started working on my original comic idea again.
         </p>
-      </div>
-    </div>
-    <div id="resume" class="view overflow-hidden secondary-color col-2">
-      <h2>Resume</h2>
-      <div class="content overflow-hidden cf">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
-          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
-          vel nisl. Phasellus aliquam massa nec commodo tempor.
-        </p>
-        <p>
-          Aenean sed mi ac enim rutrum lacinia sit amet in magna. Vivamus porttitor, tellus eget finibus pellentesque, massa tortor fermentum odio, vel malesuada lorem velit eu nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-          Curae; Integer venenatis enim dictum quam lacinia blandit. Mauris at tincidunt dui, eu congue ante. Suspendisse dictum nisi ac mi aliquet, at fermentum neque ornare. Sed fermentum tempor tellus. Pellentesque habitant morbi tristique senectus
-          et netus et malesuada fames ac turpis egestas. Proin sit amet erat bibendum, imperdiet augue sit amet, viverra erat. Nulla vel justo non mi sollicitudin tempor a at elit. Sed congue ante enim, eu dignissim augue aliquam ut. Nulla faucibus mauris
-          ac nunc tempus viverra. Nullam ac dolor vitae lorem vehicula suscipit non eget justo. Aliquam maximus dignissim justo, in bibendum dui lobortis quis. Vivamus volutpat accumsan est ac lacinia. Cras laoreet nisi in ex consequat, vel blandit risus
-          ullamcorper.
-        </p>
-        <p>
-          Mauris a convallis nisi. Etiam sit amet venenatis turpis, at pellentesque turpis. Fusce sit amet dolor in nibh malesuada pharetra. Cras iaculis et ex ut finibus. Praesent nibh urna, condimentum in erat a, pretium efficitur ipsum. Aliquam at mi tempor,
-          commodo odio a, posuere quam. Proin interdum convallis quam et consectetur. Sed nec sapien nec risus interdum egestas.
-        </p>
-        <p>
-          Quisque quis convallis tellus. Curabitur viverra non risus quis sollicitudin. Donec vel est lacinia, egestas sem sed, aliquet sapien. Aliquam erat volutpat. Etiam et orci nibh. Proin iaculis eleifend vehicula. Fusce sed molestie risus, id vehicula ante.
-          Duis quis orci sem. Proin varius justo justo, varius faucibus elit consectetur eget.
-        </p>
-        <p>
-          In quis aliquam magna. Maecenas venenatis neque eget venenatis bibendum. Vestibulum at placerat dolor, id iaculis magna. Nullam id finibus justo, eu blandit tortor. Proin ac placerat augue. Vivamus hendrerit eros sit amet nunc aliquet volutpat. Vestibulum
-          leo libero, vestibulum eu pellentesque vel, feugiat nec leo. Quisque elit leo, imperdiet dignissim diam ac, lobortis pulvinar nisi. Sed eleifend massa dui, id sodales felis auctor at. Donec eget maximus augue. Proin pulvinar tortor enim. Etiam
-          eget risus ac nisi auctor cursus. In hac habitasse platea dictumst. Fusce lacinia commodo consectetur. Suspendisse eget bibendum nulla, maximus rutrum magna.
-        </p>
+  <p>Follow me on my journey</p>
+  <div class="social">
+    <a href="https://twitter.com/sheldonmlloyd"class="social-link" title="Twitter" style="background-image:url(images/twitter.png)">Twitter</a>
+    <a href="https://www.pinterest.com/sheldonlloyd/" class="social-link" title="Pinterest" style="background-image:url(images/pinterest.png)">Pinterest</a>
+    <a href="https://artstation.com/sheldonlloyd" class="social-link" title="Artstation" style="background-image:url(images/artstation.png)">ArtStation</a>
+    <a href="https://www.instagram.com/sheldonmlloyd/" class="social-link" title="Instagram" style="background-image:url(images/instagram.png)">Instagram</a>
+    <a href="https://sheldon227.deviantart.com" class="social-link" title="DeviantArt" style="background-image:url(images/deviantart.png)">DeviantArt</a>
+    <a href="https://plus.google.com/+SheldonLloyd" class="social-link" title="Google Plus" style="background-image:url(images/google.png)">Google+</a>
+        </div>
+  
       </div>
     </div>
 
@@ -224,7 +196,7 @@
         <div class="main-nav-inner overflow-hidden">
           <h3><a href="#about">About</a></h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. <a href="#about">More&hellip;</a>
+            Right now I am a webdeveloper but 2018 is the year I plan on becoming a Web comic creator as well. <a href="#about">More&hellip;</a>
           </p>
         </div>
       </div>
@@ -243,23 +215,23 @@
         <div class="main-nav-inner overflow-hidden">
           <h3>Blog</h3>
           <ul class="main-nav-list margin-0">
-            <li><a>Post 1</a></li>
-            <li><a>Post 2</a></li>
-            <li><a>Post 3</a></li>
-            <li><a>Post 4</a></li>
+            <li><a href="https://medium.com/@SheldonLloyd/new-webcomic-resolution-30a32a5ce273">New Webcomic Resolution</a></li>
+            <li><a href="https://medium.com/@SheldonLloyd/spa-portfolio-a401f05493c2">Creating a Single Page Application for a Portfolio</a></li>
+            <li><a href="https://medium.com/@SheldonLloyd/coming-up-with-a-story-idea-3937c2c31bf7">2 Things to Remember When You Are Looking for Story Ideas</a></li>
+            <li><a href="https://medium.com/@SheldonLloyd/if-you-want-to-turn-your-idea-into-story-a-concept-here-are-2-things-you-need-to-do-to-104c80c87867">If You Want to Turn Your Idea into Story a Concept Here Are 2 Things You Need to Do To</a></li>
           </ul>
         </div>
       </div>
 
 
-      <div class="main-nav-item flexbox tertiary-color secondary-background resume"><a class="main-nav-inner overflow-hidden" href="#resume"><h3>Resume</h3></a></div>
+      <div class="main-nav-item flexbox tertiary-color secondary-background resume"><a class="main-nav-inner overflow-hidden" href="https://stackoverflow.com/users/story/1938932"><h3>Resume</h3></a></div>
       <div class="main-nav-link">
         <a href="#nav"></a>
       </div>
     </div>
     <footer class="vertical-text col-1 footer"><a class="secondary-color" rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution License</a></footer>
   </div>
-  <script src="scripts/index.js"></script>
+  <!--script src="scripts/index.js"></script-->
 </body>
 
 </html>
