--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
   <div class="flexbox height-100">
     <header class="vertical-text col-1">
-      <h1 class="margin-0">Shedon Lloyd</h1> <a href="#nav" class="portfolio-link secondary-color">Portfolio</a>
-
+      <h1 class="margin-0">Shedon Lloyd</h1> 
+      <h3 class="portfolio-link secondary-color"><a href="#nav">Portfolio</a></h3>
     </header>
 
     <div id="about" class="view overflow-hidden secondary-color col-2">
