Fixed typo in my name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="flexbox height-100">
     <header class="vertical-text col-1">
-      <h1 class="margin-0">Shedon Lloyd</h1> 
+      <h1 class="margin-0">Sheldon Lloyd</h1> 
       <h3 class="portfolio-link secondary-color"><a href="#nav">Portfolio</a></h3>
     </header>
 
