added title for comiCharacters project

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
           <h3>Project</h3></li>
-        <li class="is-active"><a href="#project-1" title="Project with a really long name">Project with a really long name</a></li>
+        <li class="is-active"><a href="#project-1" title="comiCharacters/a></li>
         <li title="Project 2"><a href="#project-2" title="Project 2">Project 2</a></li>
         <li title="Project Number 3"><a href="#project-3" title="Project Number 3">Project Number 3</a></li>
         <li title="Project 4" title="Project 4"><a href="#project-4">Project 4</a></li>
       </ul>
-      <h2><span class="secondary-color project-title">Project with a really long name</span></h2>
+      <h2><span class="secondary-color project-title">comiCharacter</span></h2>
       <div class="content overflow-hidden cf">
         <a target="_blank" href="http://fc06.deviantart.net/fs70/i/2014/083/9/1/minina_hyperdrive_by_sheldon227-d7bhlqh.png"><img class="project-preview" src="http://fc06.deviantart.net/fs70/i/2014/083/9/1/minina_hyperdrive_by_sheldon227-d7bhlqh.png" width="auto" height="auto" /></a>
         <h3>Details</h3>
@@ -91,7 +91,7 @@
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
           <h3>Project</h3></li>
-        <li><a href="#project-1" title="Project with a really long name">Project with a really long name</a></li>
+        <li><a href="#project-1" title="comiCharacters</a></li>
         <li class="is-active"><a href="#project-2" title="Project 2">Project 2</a></li>
         <li><a href="#project-3" title="Project Number 3">Project Number 3</a></li>
         <li><a href="#project-4" title="Project 4">Project 4</a></li>
@@ -125,8 +125,8 @@
     <div class="view overflow-hidden col-2" id="project-3">
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
-          <h3>Project with a really long name</h3></li>
-        <li><a href="#project-1" title="Project with a really long name">Project with a really long name</a></li>
+          <h3>comiCharacters</h3></li>
+        <li><a href="#project-1" title="comiCharacters</a></li>
         <li><a href="#project-2" title="Project 2">Project 2</a></li>
         <li class="is-active"><a href="#project-3" title="Project Number 3">Project Number 3</a></li>
         <li><a href="#project-4" title="Project 4">Project 4</a></li>
@@ -160,7 +160,7 @@
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
           <h3>Project</h3></li>
-        <li><a href="#project-1" title="Project with a really long name">Project with a really long name</a></li>
+        <li><a href="#project-1" title="comicCharacters</a></li>
         <li><a href="#project-2" title="Project 2">Project 2</a></li>
         <li><a href="#project-3" title="Project Number 3">Project Number 3</a></li>
         <li class="is-active"><a href="#project-4" title="Project 4">Project 4</a></li>
@@ -204,7 +204,7 @@
         <div class="main-nav-inner overflow-hidden">
           <h3>Projects</h3>
           <ul class="main-nav-list margin-0">
-            <li><a href="#project-1">Project with a really long name</a></li>
+            <li><a href="#project-1">comiCharacters</a></li>
             <li><a href="#project-2">Project 2</a></li>
             <li><a href="#project-3">Project Number 3</a></li>
             <li><a href="#project-4">Project 4</a></li>
