--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li title="Project Number 3"><a href="#project-3" title="Project Number 3">Project Number 3</a></li>
         <li title="Project 4" title="Project 4"><a href="#project-4">Project 4</a></li>
       </ul>
-      <h2><span class="secondary-color project-title">comiCharacter</span></h2>
+      <h2><span class="secondary-color project-title">comiCharacters</span></h2>
       <div class="content overflow-hidden cf">
         <a target="_blank" href="http://fc06.deviantart.net/fs70/i/2014/083/9/1/minina_hyperdrive_by_sheldon227-d7bhlqh.png"><img class="project-preview" src="http://fc06.deviantart.net/fs70/i/2014/083/9/1/minina_hyperdrive_by_sheldon227-d7bhlqh.png" width="auto" height="auto" /></a>
         <h3>Details</h3>
