--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       </div>
 
 
-      <div class="main-nav-item flexbox tertiary-color secondary-background resume"><a class="main-nav-inner overflow-hidden" href="https://stackoverflow.com/users/story/1938932"><h3>Resume</h3></a></div>
+      <div class="main-nav-item flexbox tertiary-color secondary-background resume"><a class="main-nav-inner overflow-hidden" href="https://stackoverflow.com/story/sheldonlloyd"><h3>Resume</h3></a></div>
       <div class="main-nav-link">
         <a href="#nav"></a>
       </div>
