Added nav-list wrapper

--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
         <div class="main-nav-inner overflow-hidden">
           <h3>Projects</h3>
           <ul class="main-nav-list margin-0">
-            <li><a href="#project-1">comiCharacters</a></li>
-            <li><a href="#project-2">Project 2</a></li>
-            <li><a href="#project-3">Project Number 3</a></li>
-            <li><a href="#project-4">Project 4</a></li>
+            <li><div class="nav-list-wrapper"><a href="#project-1">comiCharacters</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="#project-2">Project 2</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="#project-3">Project Number 3</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="#project-4">Project 4</a></div></li>
           </ul>
         </div>
       </div>
@@ -215,10 +215,10 @@
         <div class="main-nav-inner overflow-hidden">
           <h3>Blog</h3>
           <ul class="main-nav-list margin-0">
-            <li><a href="https://medium.com/@SheldonLloyd/new-webcomic-resolution-30a32a5ce273">New Webcomic Resolution</a></li>
-            <li><a href="https://medium.com/@SheldonLloyd/spa-portfolio-a401f05493c2">Creating a Single Page Application for a Portfolio</a></li>
-            <li><a href="https://medium.com/@SheldonLloyd/coming-up-with-a-story-idea-3937c2c31bf7">2 Things to Remember When You Are Looking for Story Ideas</a></li>
-            <li><a href="https://medium.com/@SheldonLloyd/if-you-want-to-turn-your-idea-into-story-a-concept-here-are-2-things-you-need-to-do-to-104c80c87867">If You Want to Turn Your Idea into Story a Concept Here Are 2 Things You Need to Do To</a></li>
+            <li><div class="nav-list-wrapper"><a href="https://medium.com/@SheldonLloyd/new-webcomic-resolution-30a32a5ce273">New Webcomic Resolution</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="https://medium.com/@SheldonLloyd/spa-portfolio-a401f05493c2">Creating a Single Page Application for a Portfolio</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="https://medium.com/@SheldonLloyd/coming-up-with-a-story-idea-3937c2c31bf7">2 Things to Remember When You Are Looking for Story Ideas</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="https://medium.com/@SheldonLloyd/if-you-want-to-turn-your-idea-into-story-a-concept-here-are-2-things-you-need-to-do-to-104c80c87867">If You Want to Turn Your Idea into Story a Concept Here Are 2 Things You Need to Do To</a></div></li>
           </ul>
         </div>
       </div>
