Added projects and updated CSS

--- a/index.html
+++ b/index.html
@@ -52,53 +52,53 @@
       </div>
     </div>
 
-    <div class="view overflow-hidden col-2" id="project-1">
+    <div class="view overflow-hidden col-2" id="webcomicx">
 
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
           <h3>Project</h3></li>
-        <li class="is-active"><a href="#project-1" title="comiCharacters/a></li>
-        <li title="Project 2"><a href="#project-2" title="Project 2">Project 2</a></li>
-        <li title="Project Number 3"><a href="#project-3" title="Project Number 3">Project Number 3</a></li>
+        <li class="is-active"><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
+        <li title="comiCharacters"><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
+        <li title="CSS SPA Portfolio"><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
         <li title="Project 4" title="Project 4"><a href="#project-4">Project 4</a></li>
+      </ul>
+      <h2><span class="secondary-color project-title">WebcomicX</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="https://www.webcomicx.com"><img class="project-preview" src="images/webcomicx-screenshot.png" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
+          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
+          vel nisl. Phasellus aliquam massa nec commodo tempor.
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
+          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
+          vel nisl. Phasellus aliquam massa nec commodo tempor.
+        </p>
+        <p>
+          Mauris a convallis nisi. Etiam sit amet venenatis turpis, at pellentesque turpis. Fusce sit amet dolor in nibh malesuada pharetra. Cras iaculis et ex ut finibus. Praesent nibh urna, condimentum in erat a, pretium efficitur ipsum. Aliquam at mi tempor,
+          commodo odio a, posuere quam. Proin interdum convallis quam et consectetur. Sed nec sapien nec risus interdum egestas.
+        </p>
+        <p>
+          Quisque quis convallis tellus. Curabitur viverra non risus quis sollicitudin. Donec vel est lacinia, egestas sem sed, aliquet sapien. Aliquam erat volutpat. Etiam et orci nibh. Proin iaculis eleifend vehicula. Fusce sed molestie risus, id vehicula ante.
+          Duis quis orci sem. Proin varius justo justo, varius faucibus elit consectetur eget.
+        </p>
+      </div>
+    </div>
+    <div class="view overflow-hidden col-2" id="comiCharacters">
+      <ul class="project-list margin-0 secondary-color">
+        <li class="project-list-heading">
+          <h3>Project</h3></li>
+        <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
+        <li class="is-active"><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
+        <li><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
+        <li><a href="#project-4" title="Project 4">Project 4</a></li>
       </ul>
       <h2><span class="secondary-color project-title">comiCharacters</span></h2>
       <div class="content overflow-hidden cf">
-        <a target="_blank" href="http://fc06.deviantart.net/fs70/i/2014/083/9/1/minina_hyperdrive_by_sheldon227-d7bhlqh.png"><img class="project-preview" src="http://fc06.deviantart.net/fs70/i/2014/083/9/1/minina_hyperdrive_by_sheldon227-d7bhlqh.png" width="auto" height="auto" /></a>
-        <h3>Details</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
-          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
-          vel nisl. Phasellus aliquam massa nec commodo tempor.
-        </p>
-        <h3>Case Study</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
-          porttitor laoreet ipsum, non cursus nisi dignissim vel. Sed eget velit in tellus ornare tempor sed vitae urna. Donec faucibus dictum ex, non bibendum ex congue quis. Ut aliquet vehicula pulvinar. Ut orci metus, varius ac accumsan non, hendrerit
-          vel nisl. Phasellus aliquam massa nec commodo tempor.
-        </p>
-        <p>
-          Mauris a convallis nisi. Etiam sit amet venenatis turpis, at pellentesque turpis. Fusce sit amet dolor in nibh malesuada pharetra. Cras iaculis et ex ut finibus. Praesent nibh urna, condimentum in erat a, pretium efficitur ipsum. Aliquam at mi tempor,
-          commodo odio a, posuere quam. Proin interdum convallis quam et consectetur. Sed nec sapien nec risus interdum egestas.
-        </p>
-        <p>
-          Quisque quis convallis tellus. Curabitur viverra non risus quis sollicitudin. Donec vel est lacinia, egestas sem sed, aliquet sapien. Aliquam erat volutpat. Etiam et orci nibh. Proin iaculis eleifend vehicula. Fusce sed molestie risus, id vehicula ante.
-          Duis quis orci sem. Proin varius justo justo, varius faucibus elit consectetur eget.
-        </p>
-      </div>
-    </div>
-    <div class="view overflow-hidden col-2" id="project-2">
-      <ul class="project-list margin-0 secondary-color">
-        <li class="project-list-heading">
-          <h3>Project</h3></li>
-        <li><a href="#project-1" title="comiCharacters</a></li>
-        <li class="is-active"><a href="#project-2" title="Project 2">Project 2</a></li>
-        <li><a href="#project-3" title="Project Number 3">Project Number 3</a></li>
-        <li><a href="#project-4" title="Project 4">Project 4</a></li>
-      </ul>
-      <h2><span class="secondary-color project-title">Project 2</span></h2>
-      <div class="content overflow-hidden cf">
-        <a target="_blank" href="project-preview" src="http://pre01.deviantart.net/ac2d/th/pre/i/2016/123/5/4/bursun_light_by_sheldon227-d9f89no.png"><img class="project-preview" src="http://pre01.deviantart.net/ac2d/th/pre/i/2016/123/5/4/bursun_light_by_sheldon227-d9f89no.png" width="auto" height="auto" /></a>
+        <a target="_blank" href="http://www.comicharacters.com"><img class="project-preview" src="images/comicharacters-screenshot.png" width="auto" height="auto" /></a>
 
         <h3>Details</h3>
         <p>
@@ -122,18 +122,19 @@
         </p>
       </div>
     </div>
-    <div class="view overflow-hidden col-2" id="project-3">
+    <div class="view overflow-hidden col-2" id="css-spa">
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
-          <h3>comiCharacters</h3></li>
-        <li><a href="#project-1" title="comiCharacters</a></li>
-        <li><a href="#project-2" title="Project 2">Project 2</a></li>
-        <li class="is-active"><a href="#project-3" title="Project Number 3">Project Number 3</a></li>
+          <h3>WebcomicX</h3>
+        </li>
+        <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
+        <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
+        <li class="is-active"><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
         <li><a href="#project-4" title="Project 4">Project 4</a></li>
       </ul>
-      <h2><span class="secondary-color project-title">Project Number 3</span></h2>
+      <h2><span class="secondary-color project-title">CSS SPA Portfolio</span></h2>
       <div class="content overflow-hidden cf">
-        <a target="_blank" href="project-preview" src="https://orig00.deviantart.net/f3f4/f/2011/172/c/4/eclipse_the_cyber_warrior_by_sheldon227-d3jm86w.jpg"><img class="project-preview" src="https://orig00.deviantart.net/f3f4/f/2011/172/c/4/eclipse_the_cyber_warrior_by_sheldon227-d3jm86w.jpg" width="auto" height="auto" /></a>
+        <a target="_blank" href="https://codepen.io/Sheldon-Lloyd/pen/WXOMNG"><img class="project-preview" src="images/spa-screenshot.png" width="auto" height="auto" /></a>
         <h3>Details</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
@@ -160,14 +161,14 @@
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
           <h3>Project</h3></li>
-        <li><a href="#project-1" title="comicCharacters</a></li>
-        <li><a href="#project-2" title="Project 2">Project 2</a></li>
-        <li><a href="#project-3" title="Project Number 3">Project Number 3</a></li>
+        <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
+        <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
+        <li><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
         <li class="is-active"><a href="#project-4" title="Project 4">Project 4</a></li>
       </ul>
       <h2><span class="secondary-color project-title">Project 4</span></h2>
       <div class="content overflow-hidden cf">
-        <a target="_blank" href="https://orig00.deviantart.net/48e6/f/2012/336/4/5/taz_by_sheldon227-d5msv69.jpg"><img class="project-preview" src="https://orig00.deviantart.net/48e6/f/2012/336/4/5/taz_by_sheldon227-d5msv69.jpg" width="auto" height="auto" /></a>
+        <a target="_blank" href="https://codepen.io/Sheldon-Lloyd/pen/WXOMNG"><img class="project-preview" src="images/spa-screenshot.png" width="auto" height="auto" /></a>
         <h3>Details</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dolor diam, ultricies vel quam vel, auctor euismod arcu. Vivamus id convallis velit, hendrerit rhoncus leo. Fusce ut enim nec neque sagittis suscipit. Praesent nec venenatis tellus. Duis
@@ -204,9 +205,9 @@
         <div class="main-nav-inner overflow-hidden">
           <h3>Projects</h3>
           <ul class="main-nav-list margin-0">
-            <li><div class="nav-list-wrapper"><a href="#project-1">comiCharacters</a></div></li>
-            <li><div class="nav-list-wrapper"><a href="#project-2">Project 2</a></div></li>
-            <li><div class="nav-list-wrapper"><a href="#project-3">Project Number 3</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="#webcomicx">WebcomicX</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="#comiCharacters">comiCharacters</a></div></li>
+            <li><div class="nav-list-wrapper"><a href="#css-spa">CSS SPA Portfolio</a></div></li>
             <li><div class="nav-list-wrapper"><a href="#project-4">Project 4</a></div></li>
           </ul>
         </div>
